feat: :sparkles: Estructura general del proyecto, de entidades a controller

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "ConexMysql":"server=localhost;user=root;password=doritoDBYS7#;database=pharmacyBD"
+  },
+  "JWT": {
+    "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
+    "Issuer": "MyStoreApi",
+    "Audience": "MyStoreApiUser",
+    "DurationInMinutes":  1
   }
 }
