--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
+    "Issuer": "MyStoreApi",
+    "Audience": "MyStoreApiUser",
+    "DurationInMinutes":  1
+  }
 }
