--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "ConexMysql":"server=localhost;user=root;password=doritoDBYS7#;database=pharmacyBDY"
+    "ConexMysql":"server=localhost;user=root;password=123456;database=pharmacyBD"
   },
   "JWT": {
     "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
