--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-  "ConexMysql":"server=localhost;user=root;password=;database=pharmacyBD"
+    "ConexMysql":"server=localhost;user=root;password=123456;database=pharmacyBD"
   },
   "Logging": {
     "LogLevel": {
