--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,12 +7,12 @@
   },
 
   "ConnectionStrings": {
-    "ConexMysql":"server=localhost;user=root;password=123456;database=pharmacyBD"
+    "ConexMysql":"server=localhost;user=root;password=doritoDBYS7#;database=pharmacyBD"
   },
   "JWT": {
     "Key": "njMCY^UbEskeAFL6eDzHuqY!s^x6Qrwe",
     "Issuer": "MyStoreApi",
     "Audience": "MyStoreApiUser",
-    "DurationInMinutes":  1
+    "DurationInMinutes":  3
   }
 }
